Buffer classes added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 
 project(GRANNY)
 
-add_executable(GRANNY  engine/libs/glad/src/glad.c   engine/render/opengl/shader/shader_program.cc
-  
- main.cc)
+add_executable(GRANNY  engine/libs/glad/src/glad.c   
+                       engine/render/opengl/shader/shader_program.cc 
+                       engine/render/opengl/buffer/vertex_buffer.cc
+                       engine/render/opengl/buffer/element_buffer.cc
+                       engine/render/opengl/buffer/vertex_array_object.cc
+                       main.cc
+               )
 
 SET(ENGINE_GLFW_LIB_PATH, "./engine/libs/libglfw3.a")
 add_library(ENGINE_GLFW_LIB STATIC IMPORTED )
