--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(GRANNY  engine/libs/glad/src/glad.c
                        engine/render/opengl/texture/texture.cc
                        engine/render/opengl/camera/camera.cc
                        engine/render/opengl/shader/uniform.cc
+                       engine/core/game_object.cc
 
                        engine/core/core.cc
                        main.cc
