--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,6 @@ target_link_libraries(GRANNY  ENGINE_GLFW_LIB gdi32 user32 )
 include_directories("./engine/libs/glad/include")
 include_directories("./engine/libs")
 include_directories("engine")
+include_directories("./")
 include_directories("engine/render")
 include_directories("engine/render/opengl")
